--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           command: sudo apt-get install graphviz
       - run: |
           if [[ "$CIRCLE_TAG" != "" ]]; then
-            VERSION="$(echo "$CIRCLE_TAG" | grep -Po '\d+\.\d+\.\d+')"
+            VERSION="$(echo "$CIRCLE_TAG" | grep -Po '(?<=v).*')"
             mvn versions:set -DnewVersion=${VERSION} versions:commit
           fi
       - run:
@@ -40,7 +40,7 @@ jobs:
           command: sudo apt-get install graphviz
       - run: |
           if [[ "$CIRCLE_TAG" != "" ]]; then
-            VERSION="$(echo "$CIRCLE_TAG" | grep -Po '\d+\.\d+\.\d+')"
+            VERSION="$(echo "$CIRCLE_TAG" | grep -Po '(?<=v).*')"
             mvn versions:set -DnewVersion=${VERSION} versions:commit
           fi
       - run:
