--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <distributionManagement>
         <repository>
-            <id>bintray-uniqueck-asciidoctorj-office-extension</id>
+            <id>bintray</id>
             <name>uniqueck-asciidoctorj-office-extension</name>
             <url>https://api.bintray.com/maven/uniqueck/asciidoctorj/${project.artifactId}/;publish=1</url>
         </repository>
