--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj</artifactId>
             <version>2.1.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
