--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -40,3 +40,26 @@ jobs:
             --batch-mode \
             --no-transfer-progress \
             clean deploy -P deploy-to-sonatype
+
+  announcement:
+    name: "Send announcements"
+    runs-on: ubuntu-latest
+    needs: build
+    if: success()
+
+    steps:
+      - name: Set release version
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Announcement
+        uses: yuzutech/zulip-send-message-action@v0.1.0
+        with:
+          username: ${{ secrets.ZULIP_USERNAME }}
+          api-key: ${{ secrets.ZULIP_API_KEY }}
+          organization-url: 'https://asciidoctor.zulipchat.com'
+          to: '279652'
+          type: 'stream'
+          topic: 'contrib releases'
+          content: |
+            asciidoctorj-office-extension ${{ env.RELEASE_VERSION }} is out!
+            https://github.com/uniqueck/asciidoctorj-office-extension/releases/tag/${{ env.RELEASE_VERSION }}
